crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v133.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 133
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 3
          - secs: 0
            nanos: 7000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 10
          - secs: 0
            nanos: 6000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 53000000
        - - 4
          - secs: 0
            nanos: 34000000
        - - 8
          - secs: 0
            nanos: 59000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 53000000
  - - SplitCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 44000000
        - - 8
          - secs: 0
            nanos: 40000000
        - - 10
          - secs: 0
            nanos: 31000000
        - - 8
          - secs: 0
            nanos: 32000000
      stake_weighted_median:
        secs: 0
        nanos: 40000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 18000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 86000000
      stake_weighted_median:
        secs: 0
        nanos: 86000000
  - - Upgrade
    - observations:
        - - 8
          - secs: 0
            nanos: 943000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 943000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 10
          - secs: 0
            nanos: 374000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 1
          - secs: 0
            nanos: 444000000
      stake_weighted_median:
        secs: 0
        nanos: 374000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 1
          - secs: 0
            nanos: 197000000
        - - 4
          - secs: 0
            nanos: 50000000
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 197000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 374000000
  - - mixed_move_calls
    - secs: 0
      nanos: 571000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 408000000
  - - transfer_objects_5_items
    - secs: 0
      nanos: 516000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 200000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 159000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 125000000
  - - mixed_commands
    - secs: 0
      nanos: 339000000
  - - upgrade_package
    - secs: 0
      nanos: 943000000
