crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v135.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
assertion_line: 2210
expression: snapshot_data
---
protocol_version: 135
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 7000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 6
          - secs: 0
            nanos: 21000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 9
          - secs: 0
            nanos: 16000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 4
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 58000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 58000000
  - - TransferObjects
    - observations:
        - - 10
          - secs: 0
            nanos: 39000000
        - - 1
          - secs: 0
            nanos: 91000000
        - - 4
          - secs: 0
            nanos: 79000000
        - - 3
          - secs: 0
            nanos: 82000000
      stake_weighted_median:
        secs: 0
        nanos: 82000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 349000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 7
          - secs: 0
            nanos: 148000000
      stake_weighted_median:
        secs: 0
        nanos: 349000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 7
          - secs: 0
            nanos: 293000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 8
          - secs: 0
            nanos: 381000000
      stake_weighted_median:
        secs: 0
        nanos: 381000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 218000000
        - - 7
          - secs: 0
            nanos: 279000000
        - - 2
          - secs: 0
            nanos: 142000000
        - - 9
          - secs: 0
            nanos: 397000000
      stake_weighted_median:
        secs: 0
        nanos: 279000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 381000000
  - - mixed_move_calls
    - secs: 0
      nanos: 660000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 382000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 246000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 232000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 96000000
  - - make_move_vec_2_elements
    - secs: 0
      nanos: 57000000
  - - mixed_commands
    - secs: 0
      nanos: 363000000
  - - upgrade_package
    - secs: 0
      nanos: 349000000
