crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v136.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
assertion_line: 2210
expression: snapshot_data
---
protocol_version: 136
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 2
          - secs: 0
            nanos: 15000000
        - - 5
          - secs: 0
            nanos: 20000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 7
          - secs: 0
            nanos: 21000000
      stake_weighted_median:
        secs: 0
        nanos: 20000000
  - - MergeCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 29000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 29000000
  - - SplitCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 32000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 47000000
        - - 5
          - secs: 0
            nanos: 75000000
      stake_weighted_median:
        secs: 0
        nanos: 47000000
  - - TransferObjects
    - observations:
        - - 7
          - secs: 0
            nanos: 26000000
        - - 10
          - secs: 0
            nanos: 43000000
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 100000000
      stake_weighted_median:
        secs: 0
        nanos: 43000000
  - - Upgrade
    - observations:
        - - 3
          - secs: 0
            nanos: 945000000
        - - 10
          - secs: 0
            nanos: 664000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 945000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 484000000
        - - 8
          - secs: 0
            nanos: 361000000
        - - 10
          - secs: 0
            nanos: 135000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 484000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 752000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 278000000
  - - transfer_objects_4_items
    - secs: 0
      nanos: 215000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 141000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 58000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 100000000
  - - mixed_commands
    - secs: 0
      nanos: 224000000
  - - upgrade_package
    - secs: 0
      nanos: 945000000
