crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v139.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 139
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 4
          - secs: 0
            nanos: 28000000
        - - 9
          - secs: 0
            nanos: 24000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 5
          - secs: 0
            nanos: 30000000
      stake_weighted_median:
        secs: 0
        nanos: 28000000
  - - MergeCoins
    - observations:
        - - 7
          - secs: 0
            nanos: 67000000
        - - 9
          - secs: 0
            nanos: 69000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 10
          - secs: 0
            nanos: 45000000
      stake_weighted_median:
        secs: 0
        nanos: 67000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 1
          - secs: 0
            nanos: 15000000
        - - 5
          - secs: 0
            nanos: 56000000
        - - 1
          - secs: 0
            nanos: 16000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 16000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 851000000
        - - 7
          - secs: 0
            nanos: 357000000
        - - 5
          - secs: 0
            nanos: 524000000
      stake_weighted_median:
        secs: 0
        nanos: 524000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 10
          - secs: 0
            nanos: 458000000
        - - 10
          - secs: 0
            nanos: 226000000
      stake_weighted_median:
        secs: 0
        nanos: 404000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 5
          - secs: 0
            nanos: 377000000
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 302000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 377000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 404000000
  - - mixed_move_calls
    - secs: 0
      nanos: 781000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 344000000
  - - transfer_objects_4_items
    - secs: 0
      nanos: 80000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 183000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 134000000
  - - make_move_vec_2_elements
    - secs: 0
      nanos: 84000000
  - - mixed_commands
    - secs: 0
      nanos: 171000000
  - - upgrade_package
    - secs: 0
      nanos: 524000000
