crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v140.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 140
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 38000000
        - - 3
          - secs: 0
            nanos: 47000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 10
          - secs: 0
            nanos: 29000000
      stake_weighted_median:
        secs: 0
        nanos: 38000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 1
          - secs: 0
            nanos: 40000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 7
          - secs: 0
            nanos: 74000000
      stake_weighted_median:
        secs: 0
        nanos: 54000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 38000000
        - - 9
          - secs: 0
            nanos: 91000000
        - - 9
          - secs: 0
            nanos: 41000000
      stake_weighted_median:
        secs: 0
        nanos: 41000000
  - - Upgrade
    - observations:
        - - 9
          - secs: 0
            nanos: 993000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 9
          - secs: 0
            nanos: 686000000
      stake_weighted_median:
        secs: 0
        nanos: 981000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 7
          - secs: 0
            nanos: 331000000
      stake_weighted_median:
        secs: 0
        nanos: 331000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 499000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 331000000
  - - mixed_move_calls
    - secs: 0
      nanos: 830000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 316000000
  - - transfer_objects_1_items
    - secs: 0
      nanos: 82000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 270000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 76000000
  - - make_move_vec_1_elements
    - secs: 0
      nanos: 50000000
  - - mixed_commands
    - secs: 0
      nanos: 232000000
  - - upgrade_package
    - secs: 0
      nanos: 981000000
