crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v79.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 79
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 18000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 18000000
  - - MergeCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 18000000
        - - 0
          - ~
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 43000000
      stake_weighted_median:
        secs: 0
        nanos: 43000000
  - - SplitCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 57000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 62000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 62000000
  - - TransferObjects
    - observations:
        - - 3
          - secs: 0
            nanos: 10000000
        - - 8
          - secs: 0
            nanos: 29000000
        - - 5
          - secs: 0
            nanos: 48000000
        - - 1
          - secs: 0
            nanos: 56000000
      stake_weighted_median:
        secs: 0
        nanos: 48000000
  - - Upgrade
    - observations:
        - - 8
          - secs: 0
            nanos: 513000000
        - - 0
          - ~
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 651000000
      stake_weighted_median:
        secs: 0
        nanos: 651000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 317000000
        - - 7
          - secs: 0
            nanos: 218000000
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 464000000
      stake_weighted_median:
        secs: 0
        nanos: 317000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 495000000
        - - 3
          - secs: 0
            nanos: 272000000
      stake_weighted_median:
        secs: 0
        nanos: 495000000
