crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v80.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 80
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 5
          - secs: 0
            nanos: 13000000
        - - 0
          - ~
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 16000000
      stake_weighted_median:
        secs: 0
        nanos: 16000000
  - - MergeCoins
    - observations:
        - - 3
          - secs: 0
            nanos: 50000000
        - - 4
          - secs: 0
            nanos: 42000000
        - - 3
          - secs: 0
            nanos: 22000000
        - - 10
          - secs: 0
            nanos: 27000000
      stake_weighted_median:
        secs: 0
        nanos: 42000000
  - - SplitCoins
    - observations:
        - - 1
          - secs: 0
            nanos: 47000000
        - - 1
          - secs: 0
            nanos: 61000000
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 42000000
      stake_weighted_median:
        secs: 0
        nanos: 47000000
  - - TransferObjects
    - observations:
        - - 10
          - secs: 0
            nanos: 91000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 44000000
        - - 8
          - secs: 0
            nanos: 62000000
      stake_weighted_median:
        secs: 0
        nanos: 62000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 1
          - secs: 0
            nanos: 358000000
        - - 0
          - ~
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 407000000
      stake_weighted_median:
        secs: 0
        nanos: 407000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 70000000
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 491000000
        - - 8
          - secs: 0
            nanos: 359000000
      stake_weighted_median:
        secs: 0
        nanos: 359000000
