crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v81.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 81
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 9
          - secs: 0
            nanos: 6000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 19000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 41000000
        - - 10
          - secs: 0
            nanos: 46000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 46000000
  - - SplitCoins
    - observations:
        - - 2
          - secs: 0
            nanos: 51000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 32000000
        - - 2
          - secs: 0
            nanos: 57000000
      stake_weighted_median:
        secs: 0
        nanos: 51000000
  - - TransferObjects
    - observations:
        - - 5
          - secs: 0
            nanos: 34000000
        - - 9
          - secs: 0
            nanos: 89000000
        - - 8
          - secs: 0
            nanos: 10000000
        - - 3
          - secs: 0
            nanos: 90000000
      stake_weighted_median:
        secs: 0
        nanos: 89000000
  - - Upgrade
    - observations:
        - - 4
          - secs: 0
            nanos: 722000000
        - - 0
          - ~
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 624000000
      stake_weighted_median:
        secs: 0
        nanos: 722000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 3
          - secs: 0
            nanos: 99000000
        - - 5
          - secs: 0
            nanos: 158000000
        - - 7
          - secs: 0
            nanos: 252000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 158000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 489000000
      stake_weighted_median:
        secs: 0
        nanos: 489000000
