crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v82.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 82
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 30000000
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 30000000
  - - MergeCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 32000000
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 28000000
        - - 9
          - secs: 0
            nanos: 26000000
      stake_weighted_median:
        secs: 0
        nanos: 28000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 39000000
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 39000000
  - - TransferObjects
    - observations:
        - - 8
          - secs: 0
            nanos: 84000000
        - - 6
          - secs: 0
            nanos: 80000000
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 43000000
      stake_weighted_median:
        secs: 0
        nanos: 80000000
  - - Upgrade
    - observations:
        - - 5
          - secs: 0
            nanos: 916000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 629000000
        - - 7
          - secs: 0
            nanos: 981000000
      stake_weighted_median:
        secs: 0
        nanos: 916000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 8
          - secs: 0
            nanos: 133000000
        - - 9
          - secs: 0
            nanos: 358000000
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 358000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 4
          - secs: 0
            nanos: 234000000
        - - 6
          - secs: 0
            nanos: 234000000
        - - 2
          - secs: 0
            nanos: 206000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 234000000
